--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 services:
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
   microservice1.api:
-    image: microservice1-image
+    image: maliayik/microservice1:${version}
     container_name: microservice1-container
     build:
       context: .
       dockerfile: Microservice1.API/Dockerfile
   microservice2.api:
-    image: microservice2-image
+    image: maliayik/microservice2:${version}
     container_name: microservice2-container
     build:
       context: .
       dockerfile: Microservice2.API/Dockerfile
+volumes:
+    sqlserver_volume:
