--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,12 @@
 services:
+  sqlserver:
+    environment:
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=Password123
+    volumes :
+     - sqlserver_volume:/var/opt/mssql   
+    ports:
+      - "1433:1433"  
   microservice1.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
