--- a/Microservice1.API/appsettings.Development.json
+++ b/Microservice1.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "Microservices": { "baseUrlMicroservice2": "http://localhost:5089" },
   "ConnectionStrings": {
     "SqlServer": "Server=localhost,1433;Database=ProductDb;User=sa;Password=Password123;TrustServerCertificate=True"
   },
