--- a/Microservice1.API/appsettings.Production.json
+++ b/Microservice1.API/appsettings.Production.json
@@ -1,6 +1,7 @@
 {
+  "Microservices": { "baseUrlMicroservice2": "http://microservice2.api:8080" },
   "ConnectionStrings": {
-
+    "SqlServer": "Server=sqlserver,1433;Database=ProductDb;User=sa;Password=Password123;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
